package main.core;

public class RegularUser extends User {
    // Regular users do not have admin privileges
    public RegularUser() {
        super();
    }
}
